--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_crafting_pieces_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_crafting_pieces_xml_by.xml
@@ -24,7 +24,7 @@
     <string id="22f2NR2N" text="Доўгі Сукаваты Ясянёвы Тронак" />
     <string id="26KZ6S7F" text="Усходні Ўпрыгожаны Эфес" />
     <string id="27Oaoras" text="Доўгае Тупое Лязо Сіякса" />
-    <string id="29OXRdZu" text="Вузкая Канічная Гарда" />
+    <string id="29OXRdZu" text="Вузкая Канійская Гарда" />
     <string id="2FLWuksh" text="Баттанійская Ручка" />
     <string id="2Fq1t169" text="Паўночная Злучаная Двухручная Ручка" />
     <string id="2LrkLq5M" text="Паўночная Доўгая Гарда Кінжала" />
@@ -76,7 +76,7 @@
     <string id="6Da4uzZO" text="Гравераваная Шырокая Рыцарская Гарда" />
     <string id="6HybYLtu" text="Грубая Пакрытая Скурай Паўночная Аднаручная Ручка" />
     <string id="6I4lZs47" text="Эфес Наверша Кап'я" />
-    <string id="6PD2rBbf" text="Канічная Пакрытая Скурай Аднаручная Ручка з Рога" />
+    <string id="6PD2rBbf" text="Канійская Пакрытая Скурай Аднаручная Ручка з Рога" />
     <string id="6uyVChLK" text="Прамавугольны Сьцяг" />
     <string id="6xkt7bxz" text="Цяжкая Каралеўская Наверша Булавы" />
     <string id="6ZW9fOUJ" text="Залатая Гарда Каскары" />
@@ -126,7 +126,7 @@
     <string id="AkfEFzkk" text="Гарда-Келіх" />
     <string id="AKJzOQkF" text="Усходняе Лязо Палаша" />
     <string id="aKpVHE2g" text="Двайныя Крылы з Кутасікам і Гаплікам" />
-    <string id="AlIRh9mz" text="Канічнае Тупое Паўночнае Лязо" />
+    <string id="AlIRh9mz" text="Канійскае Тупое Паўночнае Лязо" />
     <string id="ALO9gw69" text="Квадратнае Трохі Двухручнае Наверша Сякеры" />
     <string id="AlRRkKut" text="Цяжкае Наверша Ранішняй Зоркі" />
     <string id="alti0PsZ" text="Завостранае Лязо Вайсковага Меча" />
@@ -141,14 +141,14 @@
     <string id="aTnuOUCC" text="Тамаскінскае Сталёвае Лязо Каскары" />
     <string id="AtNVVwTF" text="Кароткі Хваёвы Тронак" />
     <string id="aUJaQmN1" text="Узмоцненая Каштоўная Двухручная Ручка" />
-    <string id="aVBGVt7N" text="Канічная Ручка з Рога" />
+    <string id="aVBGVt7N" text="Канійская Ручка з Рога" />
     <string id="Aw7Veoaa" text="Жалезная Злучаная Грубая Скураная Вуглаватая Ручка" />
     <string id="aYnTt86Y" text="Крылатая Бронзавая Гарда Кінжала" />
     <string id="az6t2tOm" text="Рабрыстая Заходняя Гарда" />
     <string id="azjW7lAg" text="Гравераваная Гарда Ілда" />
     <string id="aZp1ur9Q" text="Эфес-Чаша" />
     <string id="b1KGhVwD" text="Угнутая Паўночная Гарда" />
-    <string id="b30mn7KF" text="Лязо Хаджар" />
+    <string id="b30mn7KF" text="Лязо Ханжар" />
     <string id="b9bboB3v" text="Паўднёвае Пяхотнае Наверша Булавы" />
     <string id="baQ99nza" text="Доўгі Ясянёвы Тронак" />
     <string id="bCCYhnbY" text="Зялёная Скураная Ручка" />
@@ -212,7 +212,7 @@
     <string id="DLvSnz8U" text="Тручаная Горная Гарда" />
     <string id="dnd2hafw" text="Грубы Загорнутая Простая Ручка" />
     <string id="dNk7UZVD" text="Вузкае Тупое Ўзброенае Лязо Меча з Долам" />
-    <string id="do4vZhh4" text="Канічная Тонкая Гарда" />
+    <string id="do4vZhh4" text="Канійская Тонкая Гарда" />
     <string id="DPa0JB1U" text="Бронзавая Шыпаваная Вуглаватая Двухручная Ручка" />
     <string id="dpft1I1B" text="Тонкая Заходняя Гарда" />
     <string id="Dsf9JE8N" text="Драўляны Крук" />
@@ -259,7 +259,7 @@
     <string id="FURnbmjc" text="Ясянёвы Тронак" />
     <string id="FxCfO3zN" text="Жалезнае Ўзмоцненае Дзяржаньне Булавы" />
     <string id="g2r3QKOB" text="Паўднёвае Маленькае Наверша Сякеры" />
-    <string id="g5Va1lfk" text="Канічная Пустэльная Гарда" />
+    <string id="g5Va1lfk" text="Канійская Пустэльная Гарда" />
     <string id="g60SQjOR" text="Скураная Загорнутая Ручка Доўгага Мяча з Рога" />
     <string id="G8Fb2RPa" text="Завостранае Лязо Фальшыёна" />
     <string id="G9cBw5sV" text="Горны Круглы Эфес" />
@@ -293,10 +293,10 @@
     <string id="HbCb0T6W" text="Тупое Лязо Шырокага Меча" />
     <string id="hbv5aCRX" text="Кароткае Простае Тупое Наверша Кап'я" />
     <string id="hD5LzC6b" text="Жалезная Злучаная Вуглаватая Аднаручная Ручка" />
-    <string id="he3725oa" text="Канічны Эфес Кап'я" />
+    <string id="he3725oa" text="Канійскі Эфес Кап'я" />
     <string id="HF2WJagx" text="Упрыгожаная Скураная Загорнутая Ручка Вайсковага Меча" />
     <string id="HHVH0IoH" text="Загартаванае Дзяржаньне з Чырвонага Дрэва і Футры" />
-    <string id="Hj151a5b" text="Канічная Гарда з Аховай" />
+    <string id="Hj151a5b" text="Канійская Гарда з Аховай" />
     <string id="hk3d4d35" text="Дзяржаньне Булавы з Чырвонага Дрэва" />
     <string id="hKKIijPr" text="Угнутая Гарда-Дыск Кінжала" />
     <string id="HlFpG5xw" text="Крылатая Бронзавая Гарда" />
@@ -315,7 +315,7 @@
     <string id="i7d3En7L" text="Крукаватае Лязо Фальшыёна" />
     <string id="i9Ja7Uib" text="Тлустая Гарда Кінжала з Гравераваньнем" />
     <string id="I9yrLqPc" text="Усходняе Фланцавае Сталёвае Наверша Булавы" />
-    <string id="IAltuLvf" text="Канічная Паўночная Аднаручная Ручка" />
+    <string id="IAltuLvf" text="Канійская Паўночная Аднаручная Ручка" />
     <string id="Ibaju3oe" text="Эфес з Галавой Арла" />
     <string id="ibU7mZKx" text="Ясянёвы Выдатны Тронак Сякеры" />
     <string id="iFhr5nGq" text="Імперскае Наверша Сякеры" />
@@ -409,7 +409,7 @@
     <string id="lz8rSkzE" text="Тлустае Тупое Лязо Шаблі" />
     <string id="LzHkkphU" text="Грубая Скураная Аднаручная Ручка з Выступам" />
     <string id="lZoqaYmx" text="Шыпатае Наверша Дубец" />
-    <string id="M08i7S6M" text="Канічная Пустэльная Гарда Кінжала" />
+    <string id="M08i7S6M" text="Канійская Пустэльная Гарда Кінжала" />
     <string id="m0uOH4el" text="Скрыўленая Імперская Гарда Кінжала" />
     <string id="m2Xz2K5v" text="Паўночная Футравая Двухручная Ручка" />
     <string id="m6CVEgTU" text="Шыпатае Баявое Лязо Сякеры" />
@@ -665,9 +665,9 @@
     <string id="xb6e2YaV" text="Усходняя Простая Авальная Гарда Кінжала" />
     <string id="XbaFle0M" text="Усходнія Двайныя Крылы Кап'я" />
     <string id="xbazdytG" text="Сталёвая Злучаная Паўднёвая Двухручная Ручка" />
-    <string id="xbB9Ga5X" text="Канічнае Паўночнае Лязо" />
+    <string id="xbB9Ga5X" text="Канійскае Паўночнае Лязо" />
     <string id="XetKl5yO" text="Залатая Гарда Шаблі" />
-    <string id="XI5QgznO" text="Канічная Гарда Сікача" />
+    <string id="XI5QgznO" text="Канійская Гарда Сікача" />
     <string id="xJaVK4D0" text="Крылы з Кабана" />
     <string id="xKGpbQjJ" text="Доўгі Махагонавы Тронак з Скуранымі Абгорткамі" />
     <string id="Xo7l8eae" text="Тупое Лязо" />
@@ -717,12 +717,12 @@
     <string id="ZgCUNieQ" text="Наверша Вілаў" />
     <string id="Zgy40Qc4" text="Доўгае Махагонавае Дзяржаньне" />
     <string id="zIbAD527" text="Клінаваты Эфес" />
-    <string id="ZJrqEfBF" text="Канічнае Лязо Каскары" />
+    <string id="ZJrqEfBF" text="Канійскае Лязо Каскары" />
     <string id="zKaNmT8r" text="Гарда-Паўмесяц Кінжала" />
     <string id="ZKrpvDu6" text="Паўзагорнутая Сталёвая Ўзмоцненая Ручка Меча Бастарда" />
     <string id="ZKsIpbg6" text="Пакрытая Напалову Скурай Злучаная Дротам Двухручная Ручка" />
     <string id="ZmFx0XvN" text="Паўночная Падзеленая Аднаручная Ручка" />
-    <string id="Zmtfwmh1" text="Канічная Тонкая Гарда Кінжала" />
+    <string id="Zmtfwmh1" text="Канійская Тонкая Гарда Кінжала" />
     <string id="zoQhOBku" text="Круглы Шыпаты Эфес" />
     <string id="zoxF4ikz" text="Доўгае Ясянёвае Дзяржаньне з Скуранымі Абгорткамі" />
     <string id="Zp625kEP" text="Паўночная Драўляная Двухручная Ручка" />
