--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
@@ -259,7 +259,7 @@
     <string id="dWr3nuBq" text="{.Muzcynski}Узмоцнены Жалезны Аблямаваны Шчыт-Кропля" />
     <string id="DxRrAuRo" text="{.Nijaki}Баттанійскае Кап'ё" />
     <string id="DyXDcO36" text="{.Zanocy}Эсэрайская Упрыгожаная Ланцуговая Кальчуга" />
-    <string id="e0SDWwmU" text="{.Zanocy}Дужая Стэпавая Браня" />
+    <string id="e0SDWwmU" text="{.Zanocy}Грунтоўная Стэпавая Браня" />
     <string id="e4lKZhgv" text="{.Mnozny}Грубыя Зьвязаныя Скураныя Наручы" />
     <string id="Eb106Xg8" text="{.Muzcynski}Стургійскі Кароткі Меч" />
     <string id="ebHdQfbX" text="{.Muzcynski}Шпангенхельм з Мяккай Тканьню" />
@@ -267,7 +267,7 @@
     <string id="eEMgc7yU" text="{.Muzcynski}Баттанійскі Узмоцнены Велізарны Шчыт" />
     <string id="EezWSI6v" text="{.Zanocy}Умацаваная Браня Найміта" />
     <string id="efW2XbK8" text="{.Muzcynski}Шалом Эміра" />
-    <string id="Ejx5lXjk" text="{.Muzcynski}Стургійскі Чэйсер" />
+    <string id="Ejx5lXjk" text="{.Muzcynski}Рэвільскі Перасьледнік" />
     <string id="eN1eFdhF" text="{.Zanocy}Упрыгожаная Скураная Запрэжка над Лускатай" />
     <string id="EOplBvKz" text="{.Muzcynski}Імперскі Апераны Шалом" />
     <string id="EOz0edW4" text="{.Muzcynski}Стэпавы Шалом" />
@@ -373,7 +373,7 @@
     <string id="inr9Mt1i" text="{.Zanocy}Хузаіцкая Дзіда" />
     <string id="INWSxn7C" text="{.Mnozny}Бронзавыя Ламелярныя Наплечнікі" />
     <string id="inYBaDwu" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхельм над Кальчугай" />
-    <string id="IOt4KTHs" text="{.Muzcynski}Міжземны Палфрэй" />
+    <string id="IOt4KTHs" text="{.Muzcynski}Міжземны Палфры" />
     <string id="iPfZpGHK" text="{.Muzcynski}Цяжкі Авальны Шчыт" />
     <string id="IPp2QGwE" text="{.Muzcynski}Серп для Сена" />
     <string id="Is7j0Ir8" text="{.Muzcynski}Баттанійскі Шляхетны Двухручны Меч" />
@@ -474,7 +474,7 @@
     <string id="mkoMUmLh" text="{.Zanocy}Куртка з Радніны" />
     <string id="MKT5IzWm" text="{.Zanocy}Тлустая Роба з Рукавамі" />
     <string id="mlJKNbbn" text="{.Muzcynski}Скураны Коіф" />
-    <string id="MnmUBlbL" text="{.Muzcynski}Тарж" />
+    <string id="MnmUBlbL" text="{.Muzcynski}Тарч" />
     <string id="MQ8LCvCE" text="{.Mnozny}Зьвязаная Тканая Туніка" />
     <string id="mRGIxvYh" text="{.Muzcynski}Цэрвельер з Наносьнікам над Кальчужным Коіфам" />
     <string id="MS1gaKXk" text="{.Zanocy}Баттанійская Кідальная Сякера" />
