--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -1058,7 +1058,7 @@
     <string id="b4TeiuoJ" text="Агульнапрынята падчас вайны зьбіраць надзвычайныя падаткі." />
     <string id="b5InObbq" text="Вы прынялі прапанову старосты. Вясковыя зямяне і жыхары былі задаволены вашым вырашэньнем і падарылі вам {PRODUCT_COUNT} {.%}{?(PRODUCT_COUNT &gt; 1)}{PLURAL(PRODUCT)}{?}{PRODUCT}{\?}{.%}." />
     <string id="b5l18lo7" text="{VALUE}% шкода і хуткасьць руху пяхоты ў вашай пабудове." />
-    <string id="b5paUJjG" text="{NAME} болей няма" />
+    <string id="b5paUJjG" text="{NAME} болей не існуе" />
     <string id="b5Ucatkb" text="Раскажы мне пра свае падарожжы. Якія навіны на кірмашах?" />
     <string id="B5UMlqHc" text="Скажу сумленна... Мы ня хочам паміраць. Вы бы узялі нас у якасьці наймітаў? Так кожны атрымае тое, што жадае." />
     <string id="b6BunI6y" text="Уласьнік Селішча Зьмяніўся" />
@@ -1325,7 +1325,7 @@
     <string id="cBAVR7e8" text="дае права вышэйшай шляхце склікаць вялікія войскі" />
     <string id="CBBPWMZd" text="Дзякуючы вам, мае шахты поўныя, {?PLAYER.GENDER}пані{?}панове{\?}. Я магу набыць {X} палонных, ня болей, да завяршэньня ўгоды." />
     <string id="cbF9jdQo" text="Вашыя бацькі ня далі вам шмат грошаў, але пакінулі досыць, каб вы змаглі набыць пляцоўку некарыстанай зямлі на ўскрайку вёскі. Вы расчысьцілі камяні і выкапалі арашальны роў, вырасьцілі некалькі сезонаў ураджаю, а потым прадалі яго са значным прыбыткам." />
-    <string id="cBO49V5b" text="Не хвалюйцесь. [if:convo_innocent_smile][ib:hip]Я асабіста знайду прыдатны кірмаш для {PLURAL(SELECTED_ITEM)}." />
+    <string id="cBO49V5b" text="Не хвалюйцесь. Я асабіста знайду прыдатны кірмаш для {PLURAL(SELECTED_ITEM)}.[if:convo_innocent_smile][ib:hip]" />
     <string id="CBSDuOmp" text="{VALUE} штодзённая вядомасьць за кожную прыбытковую майстэрню." />
     <string id="CBVfPRRe" text="{VALUE} дадатковая страла за кожны калчан для ваяроў у вашай пабудове." />
     <string id="CbxLZdVg" text="Лайкас" />
