--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
@@ -47,7 +47,7 @@
     <string id="bMI735CY" text="{.Muzcynski}Штандар Лютасьці" />
     <string id="caWWYP0J" text="{.Muzcynski}Флаг Снайпераў" />
     <string id="Cd6mr3q2" text="{.Muzcynski}Сьцяг Каменьня" />
-    <string id="CdBEdJqV" text="{.Muzcynski}Флаг Праклён Коня" />
+    <string id="CdBEdJqV" text="{.Muzcynski}Флаг Праклён Каня" />
     <string id="CEK9YjWK" text="{.Muzcynski}Сьцяг Закрытых Шчытоў" />
     <string id="D3RYsPg5" text="{.Muzcynski}Флаг Сьледапыта" />
     <string id="dioBqbxi" text="{.Muzcynski}Бунчук Драўлянай Стралы" />
@@ -70,7 +70,7 @@
     <string id="QR6AaH9A" text="{.Muzcynski}Сьцяг Рыцара" />
     <string id="rUXo5AsE" text="{.Muzcynski}Бунчук Сьвісьцячай Стралы" />
     <string id="rZ4iW5vM" text="{.Muzcynski}Штандар Дысцыпліны" />
-    <string id="SlmJXyQD" text="{.Muzcynski}Бунчук Вандруючага Коня" />
+    <string id="SlmJXyQD" text="{.Muzcynski}Бунчук Вандруючага Каня" />
     <string id="UMW7oc9g" text="{.Muzcynski}Штандар Фулькума " />
     <string id="v652kWEt" text="{.Muzcynski}Штандар Гневу" />
     <string id="VP7YhB8K" text="{.Muzcynski}Сьцяг Дубовых Шчытоў" />
@@ -623,7 +623,7 @@
     <string id="iquQ9dro" text="{.Muzcynski}Паўкальчужны Бард" />
     <string id="ItUyYjdd" text="{.Zanocy}Сякера для Пакараньня Сьмерцю" />
     <string id="JHef9oad" text="{.Zanocy}Запрэжка Мула з Торбамі" />
-    <string id="JkxPt29i" text="{.Zanocy}Ланцуговая Кальчужны Браня Коня" />
+    <string id="JkxPt29i" text="{.Zanocy}Ланцуговая Кальчужны Конная Браня" />
     <string id="k3dvbLDi" text="{.Nijaki}Сядло Энея" />
     <string id="K4uryqOO" text="{.Muzcynski}Баттанійскі Завадовы{@Plural}Баттанійскіх Завадовых{\@}" />
     <string id="kKuVy1jT" text="{.Muzcynski}Хамсін{@Plural}Коней Хамсін{\@}" />
@@ -720,7 +720,7 @@
     <string id="uUGAMReu" text="{.Mnozny}Выдатныя Гарадзкія Боты" />
     <string id="UuWPfE1x" text="{.Mnozny}Лускатыя Боты" />
     <string id="uvSXUgT8" text="{.Mnozny}Боты Коньніка" />
-    <string id="VpxHysbZ" text="{.Mnozny}Трывалыя Скураныя Боты" />
+    <string id="VpxHysbZ" text="{.Mnozny}Грунтоўныя Скураныя Боты" />
     <string id="WahziEXA" text="{.Mnozny}Загорнутыя Скураныя Боты" />
     <string id="xqE9aycc" text="{.Mnozny}Лясныя Абкруткі Ног" />
     <string id="xwWYJb5A" text="{.Mnozny}Загнутыя Скураныя Боты" />
@@ -736,7 +736,7 @@
     <string id="A1zFbFta" text="{.Muzcynski}Узмоцнены Плоскі Шчыт-Кропля" />
     <string id="Ai7qIb9I" text="{.Muzcynski}Маленькі Трохкутны Шчыт" />
     <string id="ap2yulQ2" text="{.Muzcynski}Плоскі Трохкутны Шчыт" />
-    <string id="aprm5ypZ" text="{.Muzcynski}Трывалы Шчыт-Кропля Вершніка" />
+    <string id="aprm5ypZ" text="{.Muzcynski}Грунтоўны Шчыт-Кропля Вершніка" />
     <string id="aVGSZhCN" text="{.Muzcynski}Шчыт-Павеса" />
     <string id="BmHJmxXz" text="{.Muzcynski}Узмоцнены Шчыт Вершніка" />
     <string id="buaIafV6" text="{.Muzcynski}Трохкутны Шчыт з Клямкамі" />
@@ -760,13 +760,13 @@
     <string id="Ita1lG33" text="{.Muzcynski}Скураны Злучаны Шчыт-Кропля" />
     <string id="jAbn05Vg" text="{.Muzcynski}Просты Шчыт-Кропля Коньніка" />
     <string id="jqWBGBo7" text="{.Muzcynski}Узмоцнены Маленькі Шчыт Вершніка" />
-    <string id="JzZJpbTB" text="{.Muzcynski}Узмоцнены Тарж" />
+    <string id="JzZJpbTB" text="{.Muzcynski}Узмоцнены Тарч" />
     <string id="kNDbSy6K" text="{.Muzcynski}Узмоцнены Шчыт-Кропля Вершніка" />
     <string id="Lbm7asY3" text="{.Muzcynski}Высокі Трохкутны Шчыт" />
     <string id="LOhfAMnh" text="{.Muzcynski}Маленькі Трохкутны Шчыт Вершніка" />
     <string id="Mb1hQRyT" text="{.Muzcynski}Пустэльны Авальны Шчыт" />
     <string id="MiUxU83P" text="{.Muzcynski}Просты Шчыт-Кропля" />
-    <string id="MnmUBlbL" text="{.Muzcynski}Тарж" />
+    <string id="MnmUBlbL" text="{.Muzcynski}Тарч" />
     <string id="n3sz2k5j" text="{.Muzcynski}Шчыт-Кропля Рыцара" />
     <string id="NFvuDpwG" text="{.Muzcynski}Умацаваны Шчыт-Кропля" />
     <string id="nVAhoxcH" text="{.Muzcynski}Шчыт Рыцара" />
@@ -893,12 +893,12 @@
     <string id="cDetN1Ao" text="{.Muzcynski}Самаробны Спарынгавы Шчыт-Кропля" />
     <string id="cG1g4T3t" text="{.Zanocy}Спарынгавая Флісса" />
     <string id="D1webCRZ" text="{.Muzcynski}Спарынгавы Шырокі Меч" />
-    <string id="EbWA5mcO" text="{.Muzcynski}Спарынгавы Біль з Круком" />
+    <string id="EbWA5mcO" text="{.Muzcynski}Спарынгавы Біль з Гакам" />
     <string id="es77bJBa" text="{.Muzcynski}Спарынгавы Кідальны Кінжал" />
     <string id="faiiCbbS" text="{.Muzcynski}Спарынгавы Круглы Шчыт" />
     <string id="feMEjAIj" text="{.Muzcynski}Спарынгавы Шчыт-Кропля Коньніка" />
     <string id="HIjSiX4E" text="{.Nijaki}Спарынгавае Кап'ё" />
-    <string id="hyagO05b" text="{.Muzcynski}Спарынгавы Тарж" />
+    <string id="hyagO05b" text="{.Muzcynski}Спарынгавы Тарч" />
     <string id="Kba6rxWK" text="{.Muzcynski}Спарынгавы Булат" />
     <string id="lGHrlYqQ" text="{.Muzcynski}Спарынгавы Двухручнік" />
     <string id="LLaFEt1m" text="{.Muzcynski}Спарынгавы Узброены Меч" />
@@ -962,7 +962,7 @@
     <string id="a10taTGb" text="{.Zanocy}Шабля з Водціскам Ільва" />
     <string id="a47UTuL6" text="{.Zanocy}Судзьдзя" />
     <string id="A6llHL9s" text="{.Muzcynski}Доўгі Лук з Нізінаў" />
-    <string id="Ag6dujzl" text="{.Nijaki}Канічнае Лязо" />
+    <string id="Ag6dujzl" text="{.Nijaki}Канійскае Лязо" />
     <string id="aGbTPme1" text="{.Zanocy}Каса" />
     <string id="AMIdBVZb" text="{.Zanocy}Выдатная Сталёвая Спата" />
     <string id="AOZbTGOS" text="{.Muzcynski}Ксіфас" />
@@ -993,7 +993,7 @@
     <string id="dCbrowBV" text="{.Zanocy}Выдатная Сталёвая Доўгая Каскара" />
     <string id="DFcMeRdB" text="{.Zanocy}Простая Баёвая Сякера Грабежніка" />
     <string id="DI9P2HDG" text="{.Mnozny}Складзеныя Стрэлы з Шылам" />
-    <string id="Dj64aJKQ" text="{.Muzcynski}Біль з Круком" />
+    <string id="Dj64aJKQ" text="{.Muzcynski}Біль з Гакам" />
     <string id="dkuzrKJF" text="{.Zanocy}Выдатная Піка" />
     <string id="DQaV0i5W" text="{.Muzcynski}Жалезны Шырокі Меч" />
     <string id="dRWKmbaa" text="{.Zanocy}Маленькая Падагнаная Сякера" />
@@ -1005,7 +1005,7 @@
     <string id="EadnjRjs" text="{.Muzcynski}Доўгі Вайсковы Меч" />
     <string id="EBRG6qbv" text="{.Zanocy}Шляхетная Дзіда Вершніка" />
     <string id="EgrNdBct" text="{.Nijaki}Зазубранае Кідальнае Кап'ё" />
-    <string id="ekUvh8Em" text="{.Muzcynski}Канічны Двухручнік" />
+    <string id="ekUvh8Em" text="{.Muzcynski}Канійскі Двухручнік" />
     <string id="elTXYb9f" text="{.Muzcynski}Фалькс-Нож" />
     <string id="eND6ECxg" text="{.Zanocy}Дзіда Катафракта" />
     <string id="EO7pCu1b" text="{.Muzcynski}Шляхетны Лук" />
