--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_crafting_pieces_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_crafting_pieces_xml_by.xml
@@ -24,7 +24,7 @@
     <string id="22f2NR2N" text="Doŭhi Sukavaty Jasianiovy Tronak" />
     <string id="26KZ6S7F" text="Uschodni Ŭpryhožany Efies" />
     <string id="27Oaoras" text="Doŭhaje Tupoje Lazo Sijaksa" />
-    <string id="29OXRdZu" text="Vuzkaja Kaničnaja Harda" />
+    <string id="29OXRdZu" text="Vuzkaja Kanijskaja Harda" />
     <string id="2FLWuksh" text="Battanijskaja Ručka" />
     <string id="2Fq1t169" text="Paŭnočnaja Złučanaja Dvuchručnaja Ručka" />
     <string id="2LrkLq5M" text="Paŭnočnaja Doŭhaja Harda Kinžała" />
@@ -76,7 +76,7 @@
     <string id="6Da4uzZO" text="Hravieravanaja Šyrokaja Rycarskaja Harda" />
     <string id="6HybYLtu" text="Hrubaja Pakrytaja Skuraj Paŭnočnaja Adnaručnaja Ručka" />
     <string id="6I4lZs47" text="Efies Navierša Kapja" />
-    <string id="6PD2rBbf" text="Kaničnaja Pakrytaja Skuraj Adnaručnaja Ručka z Roha" />
+    <string id="6PD2rBbf" text="Kanijskaja Pakrytaja Skuraj Adnaručnaja Ručka z Roha" />
     <string id="6uyVChLK" text="Pramavuholny Ściah" />
     <string id="6xkt7bxz" text="Ciažkaja Karaleŭskaja Navierša Bułavy" />
     <string id="6ZW9fOUJ" text="Załataja Harda Kaskary" />
@@ -126,7 +126,7 @@
     <string id="AkfEFzkk" text="Harda-Kielich" />
     <string id="AKJzOQkF" text="Uschodniaje Lazo Pałaša" />
     <string id="aKpVHE2g" text="Dvajnyja Kryły z Kutasikam i Haplikam" />
-    <string id="AlIRh9mz" text="Kaničnaje Tupoje Paŭnočnaje Lazo" />
+    <string id="AlIRh9mz" text="Kanijskaje Tupoje Paŭnočnaje Lazo" />
     <string id="ALO9gw69" text="Kvadratnaje Trochi Dvuchručnaje Navierša Siakiery" />
     <string id="AlRRkKut" text="Ciažkaje Navierša Ranišniaj Zorki" />
     <string id="alti0PsZ" text="Zavostranaje Lazo Vajskovaha Mieča" />
@@ -141,14 +141,14 @@
     <string id="aTnuOUCC" text="Tamaskinskaje Stalovaje Lazo Kaskary" />
     <string id="AtNVVwTF" text="Karotki Chvajovy Tronak" />
     <string id="aUJaQmN1" text="Uzmocnienaja Kaštoŭnaja Dvuchručnaja Ručka" />
-    <string id="aVBGVt7N" text="Kaničnaja Ručka z Roha" />
+    <string id="aVBGVt7N" text="Kanijskaja Ručka z Roha" />
     <string id="Aw7Veoaa" text="Žaleznaja Złučanaja Hrubaja Skuranaja Vuhłavataja Ručka" />
     <string id="aYnTt86Y" text="Kryłataja Bronzavaja Harda Kinžała" />
     <string id="az6t2tOm" text="Rabrystaja Zachodniaja Harda" />
     <string id="azjW7lAg" text="Hravieravanaja Harda Iłda" />
     <string id="aZp1ur9Q" text="Efies-Čaša" />
     <string id="b1KGhVwD" text="Uhnutaja Paŭnočnaja Harda" />
-    <string id="b30mn7KF" text="Lazo Chadžar" />
+    <string id="b30mn7KF" text="Lazo Chanžar" />
     <string id="b9bboB3v" text="Paŭdniovaje Piachotnaje Navierša Bułavy" />
     <string id="baQ99nza" text="Doŭhi Jasianiovy Tronak" />
     <string id="bCCYhnbY" text="Zialonaja Skuranaja Ručka" />
@@ -212,7 +212,7 @@
     <string id="DLvSnz8U" text="Tručanaja Hornaja Harda" />
     <string id="dnd2hafw" text="Hruby Zahornutaja Prostaja Ručka" />
     <string id="dNk7UZVD" text="Vuzkaje Tupoje Ŭzbrojenaje Lazo Mieča z Dołam" />
-    <string id="do4vZhh4" text="Kaničnaja Tonkaja Harda" />
+    <string id="do4vZhh4" text="Kanijskaja Tonkaja Harda" />
     <string id="DPa0JB1U" text="Bronzavaja Šypavanaja Vuhłavataja Dvuchručnaja Ručka" />
     <string id="dpft1I1B" text="Tonkaja Zachodniaja Harda" />
     <string id="Dsf9JE8N" text="Draŭlany Kruk" />
@@ -259,7 +259,7 @@
     <string id="FURnbmjc" text="Jasianiovy Tronak" />
     <string id="FxCfO3zN" text="Žaleznaje Ŭzmocnienaje Dziaržańnie Bułavy" />
     <string id="g2r3QKOB" text="Paŭdniovaje Maleńkaje Navierša Siakiery" />
-    <string id="g5Va1lfk" text="Kaničnaja Pustelnaja Harda" />
+    <string id="g5Va1lfk" text="Kanijskaja Pustelnaja Harda" />
     <string id="g60SQjOR" text="Skuranaja Zahornutaja Ručka Doŭhaha Miača z Roha" />
     <string id="G8Fb2RPa" text="Zavostranaje Lazo Falšyjona" />
     <string id="G9cBw5sV" text="Horny Kruhły Efies" />
@@ -293,10 +293,10 @@
     <string id="HbCb0T6W" text="Tupoje Lazo Šyrokaha Mieča" />
     <string id="hbv5aCRX" text="Karotkaje Prostaje Tupoje Navierša Kapja" />
     <string id="hD5LzC6b" text="Žaleznaja Złučanaja Vuhłavataja Adnaručnaja Ručka" />
-    <string id="he3725oa" text="Kaničny Efies Kapja" />
+    <string id="he3725oa" text="Kanijski Efies Kapja" />
     <string id="HF2WJagx" text="Upryhožanaja Skuranaja Zahornutaja Ručka Vajskovaha Mieča" />
     <string id="HHVH0IoH" text="Zahartavanaje Dziaržańnie z Čyrvonaha Dreva i Futry" />
-    <string id="Hj151a5b" text="Kaničnaja Harda z Achovaj" />
+    <string id="Hj151a5b" text="Kanijskaja Harda z Achovaj" />
     <string id="hk3d4d35" text="Dziaržańnie Bułavy z Čyrvonaha Dreva" />
     <string id="hKKIijPr" text="Uhnutaja Harda-Dysk Kinžała" />
     <string id="HlFpG5xw" text="Kryłataja Bronzavaja Harda" />
@@ -315,7 +315,7 @@
     <string id="i7d3En7L" text="Krukavataje Lazo Falšyjona" />
     <string id="i9Ja7Uib" text="Tłustaja Harda Kinžała z Hravieravańniem" />
     <string id="I9yrLqPc" text="Uschodniaje Fłancavaje Stalovaje Navierša Bułavy" />
-    <string id="IAltuLvf" text="Kaničnaja Paŭnočnaja Adnaručnaja Ručka" />
+    <string id="IAltuLvf" text="Kanijskaja Paŭnočnaja Adnaručnaja Ručka" />
     <string id="Ibaju3oe" text="Efies z Hałavoj Arła" />
     <string id="ibU7mZKx" text="Jasianiovy Vydatny Tronak Siakiery" />
     <string id="iFhr5nGq" text="Impierskaje Navierša Siakiery" />
@@ -409,7 +409,7 @@
     <string id="lz8rSkzE" text="Tłustaje Tupoje Lazo Šabli" />
     <string id="LzHkkphU" text="Hrubaja Skuranaja Adnaručnaja Ručka z Vystupam" />
     <string id="lZoqaYmx" text="Šypataje Navierša Dubiec" />
-    <string id="M08i7S6M" text="Kaničnaja Pustelnaja Harda Kinžała" />
+    <string id="M08i7S6M" text="Kanijskaja Pustelnaja Harda Kinžała" />
     <string id="m0uOH4el" text="Skryŭlenaja Impierskaja Harda Kinžała" />
     <string id="m2Xz2K5v" text="Paŭnočnaja Futravaja Dvuchručnaja Ručka" />
     <string id="m6CVEgTU" text="Šypataje Bajavoje Lazo Siakiery" />
@@ -665,9 +665,9 @@
     <string id="xb6e2YaV" text="Uschodniaja Prostaja Avalnaja Harda Kinžała" />
     <string id="XbaFle0M" text="Uschodnija Dvajnyja Kryły Kapja" />
     <string id="xbazdytG" text="Stalovaja Złučanaja Paŭdniovaja Dvuchručnaja Ručka" />
-    <string id="xbB9Ga5X" text="Kaničnaje Paŭnočnaje Lazo" />
+    <string id="xbB9Ga5X" text="Kanijskaje Paŭnočnaje Lazo" />
     <string id="XetKl5yO" text="Załataja Harda Šabli" />
-    <string id="XI5QgznO" text="Kaničnaja Harda Sikača" />
+    <string id="XI5QgznO" text="Kanijskaja Harda Sikača" />
     <string id="xJaVK4D0" text="Kryły z Kabana" />
     <string id="xKGpbQjJ" text="Doŭhi Machahonavy Tronak z Skuranymi Abhortkami" />
     <string id="Xo7l8eae" text="Tupoje Lazo" />
@@ -717,12 +717,12 @@
     <string id="ZgCUNieQ" text="Navierša Viłaŭ" />
     <string id="Zgy40Qc4" text="Doŭhaje Machahonavaje Dziaržańnie" />
     <string id="zIbAD527" text="Klinavaty Efies" />
-    <string id="ZJrqEfBF" text="Kaničnaje Lazo Kaskary" />
+    <string id="ZJrqEfBF" text="Kanijskaje Lazo Kaskary" />
     <string id="zKaNmT8r" text="Harda-Paŭmiesiac Kinžała" />
     <string id="ZKrpvDu6" text="Paŭzahornutaja Stalovaja Ŭzmocnienaja Ručka Mieča Bastarda" />
     <string id="ZKsIpbg6" text="Pakrytaja Napałovu Skuraj Złučanaja Drotam Dvuchručnaja Ručka" />
     <string id="ZmFx0XvN" text="Paŭnočnaja Padzielenaja Adnaručnaja Ručka" />
-    <string id="Zmtfwmh1" text="Kaničnaja Tonkaja Harda Kinžała" />
+    <string id="Zmtfwmh1" text="Kanijskaja Tonkaja Harda Kinžała" />
     <string id="zoQhOBku" text="Kruhły Šypaty Efies" />
     <string id="zoxF4ikz" text="Doŭhaje Jasianiovaje Dziaržańnie z Skuranymi Abhortkami" />
     <string id="Zp625kEP" text="Paŭnočnaja Draŭlanaja Dvuchručnaja Ručka" />
