--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
@@ -259,7 +259,7 @@
     <string id="dWr3nuBq" text="{.Muzcynski}Uzmocnieny Žalezny Ablamavany Ščyt-Kropla" />
     <string id="DxRrAuRo" text="{.Nijaki}Battanijskaje Kapjo" />
     <string id="DyXDcO36" text="{.Zanocy}Eserajskaja Upryhožanaja Łancuhovaja Kalčuha" />
-    <string id="e0SDWwmU" text="{.Zanocy}Dužaja Stepavaja Brania" />
+    <string id="e0SDWwmU" text="{.Zanocy}Hruntoŭnaja Stepavaja Brania" />
     <string id="e4lKZhgv" text="{.Mnozny}Hrubyja Źviazanyja Skuranyja Naručy" />
     <string id="Eb106Xg8" text="{.Muzcynski}Sturhijski Karotki Mieč" />
     <string id="ebHdQfbX" text="{.Muzcynski}Španhienchielm z Miakkaj Tkańniu" />
@@ -267,7 +267,7 @@
     <string id="eEMgc7yU" text="{.Muzcynski}Battanijski Uzmocnieny Vielizarny Ščyt" />
     <string id="EezWSI6v" text="{.Zanocy}Umacavanaja Brania Najmita" />
     <string id="efW2XbK8" text="{.Muzcynski}Šałom Emira" />
-    <string id="Ejx5lXjk" text="{.Muzcynski}Sturhijski Čejsier" />
+    <string id="Ejx5lXjk" text="{.Muzcynski}Revilski Pieraślednik" />
     <string id="eN1eFdhF" text="{.Zanocy}Upryhožanaja Skuranaja Zaprežka nad Łuskataj" />
     <string id="EOplBvKz" text="{.Muzcynski}Impierski Apierany Šałom" />
     <string id="EOz0edW4" text="{.Muzcynski}Stepavy Šałom" />
@@ -373,7 +373,7 @@
     <string id="inr9Mt1i" text="{.Zanocy}Chuzaickaja Dzida" />
     <string id="INWSxn7C" text="{.Mnozny}Bronzavyja Łamielarnyja Naplečniki" />
     <string id="inYBaDwu" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchielm nad Kalčuhaj" />
-    <string id="IOt4KTHs" text="{.Muzcynski}Mižziemny Pałfrej" />
+    <string id="IOt4KTHs" text="{.Muzcynski}Mižziemny Pałfry" />
     <string id="iPfZpGHK" text="{.Muzcynski}Ciažki Avalny Ščyt" />
     <string id="IPp2QGwE" text="{.Muzcynski}Sierp dla Siena" />
     <string id="Is7j0Ir8" text="{.Muzcynski}Battanijski Šlachietny Dvuchručny Mieč" />
@@ -474,7 +474,7 @@
     <string id="mkoMUmLh" text="{.Zanocy}Kurtka z Radniny" />
     <string id="MKT5IzWm" text="{.Zanocy}Tłustaja Roba z Rukavami" />
     <string id="mlJKNbbn" text="{.Muzcynski}Skurany Koif" />
-    <string id="MnmUBlbL" text="{.Muzcynski}Tarž" />
+    <string id="MnmUBlbL" text="{.Muzcynski}Tarč" />
     <string id="MQ8LCvCE" text="{.Mnozny}Źviazanaja Tkanaja Tunika" />
     <string id="mRGIxvYh" text="{.Muzcynski}Cervieljer z Nanośnikam nad Kalčužnym Koifam" />
     <string id="MS1gaKXk" text="{.Zanocy}Battanijskaja Kidalnaja Siakiera" />
