--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -1058,7 +1058,7 @@
     <string id="b4TeiuoJ" text="Ahulnapryniata padčas vajny źbirać nadzvyčajnyja padatki." />
     <string id="b5InObbq" text="Vy pryniali prapanovu starosty. Viaskovyja ziamianie i žychary byli zadavoleny vašym vyrašeńniem i padaryli vam {PRODUCT_COUNT} {.%}{?(PRODUCT_COUNT &gt; 1)}{PLURAL(PRODUCT)}{?}{PRODUCT}{\?}{.%}." />
     <string id="b5l18lo7" text="{VALUE}% škoda i chutkaść ruchu piachoty ŭ vašaj pabudovie." />
-    <string id="b5paUJjG" text="{NAME} bolej niama" />
+    <string id="b5paUJjG" text="{NAME} bolej nie isnuje" />
     <string id="b5Ucatkb" text="Raskažy mnie pra svaje padarožžy. Jakija naviny na kirmašach?" />
     <string id="B5UMlqHc" text="Skažu sumlenna... My nia chočam pamirać. Vy by uziali nas u jakaści najmitaŭ? Tak kožny atrymaje toje, što žadaje." />
     <string id="b6BunI6y" text="Ułaśnik Sielišča Źmianiŭsia" />
@@ -1325,7 +1325,7 @@
     <string id="cBAVR7e8" text="daje prava vyšejšaj šlachcie sklikać vialikija vojski" />
     <string id="CBBPWMZd" text="Dziakujučy vam, maje šachty poŭnyja, {?PLAYER.GENDER}pani{?}panovie{\?}. Ja mahu nabyć {X} pałonnych, nia bolej, da zaviaršeńnia ŭhody." />
     <string id="cbF9jdQo" text="Vašyja baćki nia dali vam šmat hrošaŭ, ale pakinuli dosyć, kab vy zmahli nabyć placoŭku niekarystanaj ziamli na ŭskrajku vioski. Vy rasčyścili kamiani i vykapali arašalny roŭ, vyraścili niekalki siezonaŭ uradžaju, a potym pradali jaho sa značnym prybytkam." />
-    <string id="cBO49V5b" text="Nie chvalujcieś. [if:convo_innocent_smile][ib:hip]Ja asabista znajdu prydatny kirmaš dla {PLURAL(SELECTED_ITEM)}." />
+    <string id="cBO49V5b" text="Nie chvalujcieś. Ja asabista znajdu prydatny kirmaš dla {PLURAL(SELECTED_ITEM)}.[if:convo_innocent_smile][ib:hip]" />
     <string id="CBSDuOmp" text="{VALUE} štodzionnaja viadomaść za kožnuju prybytkovuju majsterniu." />
     <string id="CBVfPRRe" text="{VALUE} dadatkovaja strała za kožny kałčan dla vajaroŭ u vašaj pabudovie." />
     <string id="CbxLZdVg" text="Łajkas" />
