--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
@@ -47,7 +47,7 @@
     <string id="bMI735CY" text="{.Muzcynski}Štandar Lutaści" />
     <string id="caWWYP0J" text="{.Muzcynski}Fłah Snajpieraŭ" />
     <string id="Cd6mr3q2" text="{.Muzcynski}Ściah Kamieńnia" />
-    <string id="CdBEdJqV" text="{.Muzcynski}Fłah Praklon Konia" />
+    <string id="CdBEdJqV" text="{.Muzcynski}Fłah Praklon Kania" />
     <string id="CEK9YjWK" text="{.Muzcynski}Ściah Zakrytych Ščytoŭ" />
     <string id="D3RYsPg5" text="{.Muzcynski}Fłah Śledapyta" />
     <string id="dioBqbxi" text="{.Muzcynski}Bunčuk Draŭlanaj Strały" />
@@ -70,7 +70,7 @@
     <string id="QR6AaH9A" text="{.Muzcynski}Ściah Rycara" />
     <string id="rUXo5AsE" text="{.Muzcynski}Bunčuk Śviściačaj Strały" />
     <string id="rZ4iW5vM" text="{.Muzcynski}Štandar Dyscypliny" />
-    <string id="SlmJXyQD" text="{.Muzcynski}Bunčuk Vandrujučaha Konia" />
+    <string id="SlmJXyQD" text="{.Muzcynski}Bunčuk Vandrujučaha Kania" />
     <string id="UMW7oc9g" text="{.Muzcynski}Štandar Fulkuma " />
     <string id="v652kWEt" text="{.Muzcynski}Štandar Hnievu" />
     <string id="VP7YhB8K" text="{.Muzcynski}Ściah Dubovych Ščytoŭ" />
@@ -623,7 +623,7 @@
     <string id="iquQ9dro" text="{.Muzcynski}Paŭkalčužny Bard" />
     <string id="ItUyYjdd" text="{.Zanocy}Siakiera dla Pakarańnia Śmierciu" />
     <string id="JHef9oad" text="{.Zanocy}Zaprežka Muła z Torbami" />
-    <string id="JkxPt29i" text="{.Zanocy}Łancuhovaja Kalčužny Brania Konia" />
+    <string id="JkxPt29i" text="{.Zanocy}Łancuhovaja Kalčužny Konnaja Brania" />
     <string id="k3dvbLDi" text="{.Nijaki}Siadło Enieja" />
     <string id="K4uryqOO" text="{.Muzcynski}Battanijski Zavadovy{@Plural}Battanijskich Zavadovych{\@}" />
     <string id="kKuVy1jT" text="{.Muzcynski}Chamsin{@Plural}Koniej Chamsin{\@}" />
@@ -720,7 +720,7 @@
     <string id="uUGAMReu" text="{.Mnozny}Vydatnyja Haradzkija Boty" />
     <string id="UuWPfE1x" text="{.Mnozny}Łuskatyja Boty" />
     <string id="uvSXUgT8" text="{.Mnozny}Boty Końnika" />
-    <string id="VpxHysbZ" text="{.Mnozny}Tryvałyja Skuranyja Boty" />
+    <string id="VpxHysbZ" text="{.Mnozny}Hruntoŭnyja Skuranyja Boty" />
     <string id="WahziEXA" text="{.Mnozny}Zahornutyja Skuranyja Boty" />
     <string id="xqE9aycc" text="{.Mnozny}Lasnyja Abkrutki Noh" />
     <string id="xwWYJb5A" text="{.Mnozny}Zahnutyja Skuranyja Boty" />
@@ -736,7 +736,7 @@
     <string id="A1zFbFta" text="{.Muzcynski}Uzmocnieny Płoski Ščyt-Kropla" />
     <string id="Ai7qIb9I" text="{.Muzcynski}Maleńki Trochkutny Ščyt" />
     <string id="ap2yulQ2" text="{.Muzcynski}Płoski Trochkutny Ščyt" />
-    <string id="aprm5ypZ" text="{.Muzcynski}Tryvały Ščyt-Kropla Vieršnika" />
+    <string id="aprm5ypZ" text="{.Muzcynski}Hruntoŭny Ščyt-Kropla Vieršnika" />
     <string id="aVGSZhCN" text="{.Muzcynski}Ščyt-Paviesa" />
     <string id="BmHJmxXz" text="{.Muzcynski}Uzmocnieny Ščyt Vieršnika" />
     <string id="buaIafV6" text="{.Muzcynski}Trochkutny Ščyt z Klamkami" />
@@ -760,13 +760,13 @@
     <string id="Ita1lG33" text="{.Muzcynski}Skurany Złučany Ščyt-Kropla" />
     <string id="jAbn05Vg" text="{.Muzcynski}Prosty Ščyt-Kropla Końnika" />
     <string id="jqWBGBo7" text="{.Muzcynski}Uzmocnieny Maleńki Ščyt Vieršnika" />
-    <string id="JzZJpbTB" text="{.Muzcynski}Uzmocnieny Tarž" />
+    <string id="JzZJpbTB" text="{.Muzcynski}Uzmocnieny Tarč" />
     <string id="kNDbSy6K" text="{.Muzcynski}Uzmocnieny Ščyt-Kropla Vieršnika" />
     <string id="Lbm7asY3" text="{.Muzcynski}Vysoki Trochkutny Ščyt" />
     <string id="LOhfAMnh" text="{.Muzcynski}Maleńki Trochkutny Ščyt Vieršnika" />
     <string id="Mb1hQRyT" text="{.Muzcynski}Pustelny Avalny Ščyt" />
     <string id="MiUxU83P" text="{.Muzcynski}Prosty Ščyt-Kropla" />
-    <string id="MnmUBlbL" text="{.Muzcynski}Tarž" />
+    <string id="MnmUBlbL" text="{.Muzcynski}Tarč" />
     <string id="n3sz2k5j" text="{.Muzcynski}Ščyt-Kropla Rycara" />
     <string id="NFvuDpwG" text="{.Muzcynski}Umacavany Ščyt-Kropla" />
     <string id="nVAhoxcH" text="{.Muzcynski}Ščyt Rycara" />
@@ -893,12 +893,12 @@
     <string id="cDetN1Ao" text="{.Muzcynski}Samarobny Sparynhavy Ščyt-Kropla" />
     <string id="cG1g4T3t" text="{.Zanocy}Sparynhavaja Flissa" />
     <string id="D1webCRZ" text="{.Muzcynski}Sparynhavy Šyroki Mieč" />
-    <string id="EbWA5mcO" text="{.Muzcynski}Sparynhavy Bil z Krukom" />
+    <string id="EbWA5mcO" text="{.Muzcynski}Sparynhavy Bil z Hakam" />
     <string id="es77bJBa" text="{.Muzcynski}Sparynhavy Kidalny Kinžał" />
     <string id="faiiCbbS" text="{.Muzcynski}Sparynhavy Kruhły Ščyt" />
     <string id="feMEjAIj" text="{.Muzcynski}Sparynhavy Ščyt-Kropla Końnika" />
     <string id="HIjSiX4E" text="{.Nijaki}Sparynhavaje Kapjo" />
-    <string id="hyagO05b" text="{.Muzcynski}Sparynhavy Tarž" />
+    <string id="hyagO05b" text="{.Muzcynski}Sparynhavy Tarč" />
     <string id="Kba6rxWK" text="{.Muzcynski}Sparynhavy Bułat" />
     <string id="lGHrlYqQ" text="{.Muzcynski}Sparynhavy Dvuchručnik" />
     <string id="LLaFEt1m" text="{.Muzcynski}Sparynhavy Uzbrojeny Mieč" />
@@ -962,7 +962,7 @@
     <string id="a10taTGb" text="{.Zanocy}Šabla z Vodciskam Ilva" />
     <string id="a47UTuL6" text="{.Zanocy}Sudździa" />
     <string id="A6llHL9s" text="{.Muzcynski}Doŭhi Łuk z Nizinaŭ" />
-    <string id="Ag6dujzl" text="{.Nijaki}Kaničnaje Lazo" />
+    <string id="Ag6dujzl" text="{.Nijaki}Kanijskaje Lazo" />
     <string id="aGbTPme1" text="{.Zanocy}Kasa" />
     <string id="AMIdBVZb" text="{.Zanocy}Vydatnaja Stalovaja Spata" />
     <string id="AOZbTGOS" text="{.Muzcynski}Ksifas" />
@@ -993,7 +993,7 @@
     <string id="dCbrowBV" text="{.Zanocy}Vydatnaja Stalovaja Doŭhaja Kaskara" />
     <string id="DFcMeRdB" text="{.Zanocy}Prostaja Bajovaja Siakiera Hrabiežnika" />
     <string id="DI9P2HDG" text="{.Mnozny}Składzienyja Streły z Šyłam" />
-    <string id="Dj64aJKQ" text="{.Muzcynski}Bil z Krukom" />
+    <string id="Dj64aJKQ" text="{.Muzcynski}Bil z Hakam" />
     <string id="dkuzrKJF" text="{.Zanocy}Vydatnaja Pika" />
     <string id="DQaV0i5W" text="{.Muzcynski}Žalezny Šyroki Mieč" />
     <string id="dRWKmbaa" text="{.Zanocy}Maleńkaja Padahnanaja Siakiera" />
@@ -1005,7 +1005,7 @@
     <string id="EadnjRjs" text="{.Muzcynski}Doŭhi Vajskovy Mieč" />
     <string id="EBRG6qbv" text="{.Zanocy}Šlachietnaja Dzida Vieršnika" />
     <string id="EgrNdBct" text="{.Nijaki}Zazubranaje Kidalnaje Kapjo" />
-    <string id="ekUvh8Em" text="{.Muzcynski}Kaničny Dvuchručnik" />
+    <string id="ekUvh8Em" text="{.Muzcynski}Kanijski Dvuchručnik" />
     <string id="elTXYb9f" text="{.Muzcynski}Falks-Nož" />
     <string id="eND6ECxg" text="{.Zanocy}Dzida Katafrakta" />
     <string id="EO7pCu1b" text="{.Muzcynski}Šlachietny Łuk" />
